Fix images, add blog post

--- a/content/posts/20210608.md
+++ b/content/posts/20210608.md
@@ -1,14 +1,33 @@
 +++
 author = "Matthew Zegar"
 title = "TTT Reborn"
-date = "2021-06-08"
-description = "TTT Reborn"
+date = "2021-06-09"
+description = ""
 tags = [
 "s&box",
 "TTT Reborn"
 ]
 +++
 
-![alt text](/images/mattsummer.png)
+I'm currently taking a break from my original "The Specialists" project to work on [TTT Reborn](https://github.com/TTTReborn/ttt-reborn).
+As someone who has played thousands of hours of the original [TTT](https://ttt.badking.net/), I am excited to be a part of the 
+team that is remaking the gamemode for [s&box](https://sbox.facepunch.com/news).
 
-Trying to figure out why this is broken...
+### Networking in s&box
+
+I haven't had the opportunity yet to take any networking classes at my university yet. It made me a bit worried when I decided
+to write some networking code needed for TTT Reborn. However, it was a breeze. It's literally as simple as just adding
+a [decorator](https://wiki.facepunch.com/sbox/Networked_Types) around a variable to network it to other players. This ease of
+use allowed me to implement a fully fledged round system, and a body inspecting system.
+
+Here is a quick snippet of code...
+
+```csharp
+[Net, Local] // Now networked locally to players!
+public RoleType Role { get; set; }
+```
+
+### HUD Preview
+
+Lastly, here's a quick preview of the progress so far.
+<img class="img-fluid" src="/images/blogs/tttreborn1.png">
