Apply img fluid to all images

--- a/content/posts/20210608.md
+++ b/content/posts/20210608.md
@@ -30,4 +30,4 @@ public RoleType Role { get; set; }
 ### HUD Preview
 
 Lastly, here's a quick preview of the progress so far.
-<img class="img-fluid" src="/images/blogs/tttreborn1.png">
+![reborn-preview-image](/images/blogs/tttreborn1.png)
